--- a/resources/sass/partials/header.scss
+++ b/resources/sass/partials/header.scss
@@ -5,6 +5,8 @@ header{
   width: 100vw;
   font-size: 14px;
   color: $nav-color;
+  background-color: white;
+  z-index: 10;
   #nav-logo{
     height: 60px;
   }
