--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,3 +2,6 @@
 @import 'partials/variables.scss';
 @import 'partials/general.scss';
 @import 'partials/header.scss';
+@import 'partials/home.scss';
+@import 'partials/footer.scss';
+@import 'partials/privacy.scss';
