--- a/resources/sass/partials/general.scss
+++ b/resources/sass/partials/general.scss
@@ -9,3 +9,15 @@ body{
     color: white;
   }
 }
+
+.blue{
+  background-color: $nav-color;
+}
+
+.grey{
+  background-color: $grey;
+}
+
+.dis-none{
+  display: none;
+}
